add header and style for header

--- a/index.html
+++ b/index.html
@@ -4,12 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap-grid.css">
+    <link rel="stylesheet" href="vendor/bootstrap-grid.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Merriweather+Sans:ital,wght@1,500&family=Yellowtail&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Project-4.6</title>
 </head>
 <body>
-    
+    <header class="splash">
+        <div class="foto-wrapper">
+            <img class="splash-foto" src="https://images.pexels.com/photos/163143/sackcloth-sackcloth-textured-laptop-ipad-163143.jpeg" alt="desktop">
+            <div class="up-wrapper">
+                <div class="h3-wrapper">
+                    <h3 class="mark-name">Golden</h3>
+                </div>
+                <div class="nav-wrapper">
+                    <nav>
+                        <ul>
+                            <li><a href="#"></a>home</li>
+                            <li><a href="#"></a>services</li>
+                            <li><a href="#"></a>portfolio</li>
+                            <li><a href="#"></a>about</li>
+                            <li><a href="#"></a>contact</li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="splash-center">
+                <h2>Welcome to our studio!</h2>
+                <h1>It's nice to meet you</h1>
+                <a href="#" class="button">tell me more</a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
