add section services

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Project-4.6</title>
 </head>
 <body>
+
     <header class="splash">
         <div class="foto-wrapper">
             <img class="splash-foto" src="https://images.pexels.com/photos/163143/sackcloth-sackcloth-textured-laptop-ipad-163143.jpeg" alt="desktop">
@@ -39,5 +40,16 @@
             </div>
         </div>
     </header>
+
+    <section class="services">
+        <div class="container">
+            <div class="section-title">
+                <h2>Services</h2>
+                <p>Lorem Ipsum dolor sit amet</p>
+            </div>
+
+        </div>
+    </section>
+    
 </body>
 </html>
