--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <div class="nav-wrapper">
                     <nav>
                         <ul>
-                            <li><a href="#"></a>home</li>
-                            <li><a href="#"></a>services</li>
-                            <li><a href="#"></a>portfolio</li>
-                            <li><a href="#"></a>about</li>
-                            <li><a href="#"></a>contact</li>
+                            <li><a href="#">home</a></li>
+                            <li><a href="#">services</a></li>
+                            <li><a href="#">portfolio</a></li>
+                            <li><a href="#">about</a></li>
+                            <li><a href="#">contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -49,6 +49,7 @@
             </div>
 
         </div>
+        
     </section>
     
 </body>
