--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,11 +13,11 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Project-4.6</title>
 </head>
+
 <body>
 
     <header class="splash">
         <div class="foto-wrapper">
-            <img class="splash-foto" src="https://images.pexels.com/photos/163143/sackcloth-sackcloth-textured-laptop-ipad-163143.jpeg" alt="desktop">
             <div class="up-wrapper">
                 <div class="h3-wrapper">
                     <h3 class="mark-name">Golden</h3>
@@ -47,7 +48,92 @@
                 <h2>Services</h2>
                 <p>Lorem Ipsum dolor sit amet</p>
             </div>
+            <div class="section-wrapper">
+                <div class="box">
+                    <i class="fa-solid fa-basket-shopping"></i>
+                    <h4 class="box-title">E-Commerce</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h4 class="box-title">Responsive Web</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="box">
+                    <i class="fa-sharp fa-solid fa-shield"></i>
+                    <h4 class="box-title">Web Security</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </div>
         </div>
     </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <div class="section-title">
+                <h2>Our portfolio</h2>
+                <p>Lorem Ipsum dolor sit amet</p>
+            </div>
+            <div class="section-wrapper">
+                <div class="box-portfolio">
+                    <div class="immage-wrapper">
+                        <img src="https://images.pexels.com/photos/510174/pexels-photo-510174.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+                    </div>
+                    <h4 class="box-title">Ebony &amp; Ivory</h4>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+                <div class="box-portfolio">
+                    <div class="immage-wrapper">
+                        <img src="https://images.pexels.com/photos/2265484/pexels-photo-2265484.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+                    </div>
+                    <h4 class="box-title">Smart Stationary</h4>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+                <div class="box-portfolio">
+                    <div class="immage-wrapper">
+                        <img src="https://images.pexels.com/photos/955405/pexels-photo-955405.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+                    </div>
+                    <h4 class="box-title">Treehouse Template</h4>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+                <div class="box-portfolio">
+                    <div class="immage-wrapper">
+                        <img src="https://images.pexels.com/photos/1827548/pexels-photo-1827548.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+                    </div>
+                    <h4 class="box-title">Clever Poster</h4>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+                <div class="box-portfolio">
+                    <div class="immage-wrapper">
+                        <img src="https://images.pexels.com/photos/3693111/pexels-photo-3693111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+                    </div>
+                    <h4 class="box-title">Vinyl Record</h4>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+                <div class="box-portfolio">
+                    <div class="immage-wrapper">
+                        <img src="https://images.pexels.com/photos/1268124/pexels-photo-1268124.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+                    </div>
+                    <h4 class="box-title">Burned Logo</h4>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="page-footer">
+        <div class="footer-container">
+            <div class="footer-text">
+                <p>&copy; Copyright 2014 FreebiesXpress.com</p>
+            </div>
+            <div class="contact-wrapper">
+                <ul>
+                    <li class="contact-list"><a href="#"><i class=" contact fa-brands fa-twitter"></i>Facebook</a></li>
+                    <li class="contact-list"><a href="#"><i class="contact fa-brands fa-facebook-f"></i>Instagram</a></li>
+                    <li class="contact-list"><a href="#"><i class="contact fa-brands fa-pinterest-p"></i>Pinterest</a></li>
+                    <li class="contact-list"><a href="#"><i class="contact fa-brands fa-google-plus-g"></i>Google</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
