add RWD for style

--- a/index.html
+++ b/index.html
@@ -1,139 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="vendor/bootstrap-grid.css" />
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Merriweather+Sans:ital,wght@1,500&family=Yellowtail&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="css/style.css" />
+		<title>Project-4.6</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="vendor/bootstrap-grid.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Merriweather+Sans:ital,wght@1,500&family=Yellowtail&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Project-4.6</title>
-</head>
+	<body>
+		<header class="splash">
+			<div class="foto-wrapper">
+				<div class="up-wrapper">
+					<div class="h3-wrapper">
+						<h3 class="mark-name">Golden</h3>
+					</div>
+					<div class="nav-wrapper">
+						<nav>
+							<ul>
+								<li><a href="#">home</a></li>
+								<li><a href="#">services</a></li>
+								<li><a href="#">portfolio</a></li>
+								<li><a href="#">about</a></li>
+								<li><a href="#">contact</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+				<div class="splash-center">
+					<h2>Welcome to our studio!</h2>
+					<h1>It's nice to meet you</h1>
+					<a href="#" class="button">tell me more</a>
+				</div>
+			</div>
+		</header>
 
-<body>
+		<section class="services">
+			<div class="container">
+				<div class="section-title">
+					<h2>Services</h2>
+					<p>Lorem Ipsum dolor sit amet</p>
+				</div>
+				<div class="section-wrapper">
+					<div class="box">
+						<i class="fa-solid fa-basket-shopping"></i>
+						<h4 class="box-title">E-Commerce</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit sed do eiusmod tempor incididunt ut labore et
+							dolore magna aliqua.
+						</p>
+					</div>
+					<div class="box">
+						<i class="fa-solid fa-laptop-code"></i>
+						<h4 class="box-title">Responsive Web</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit sed do eiusmod tempor incididunt ut labore et
+							dolore magna aliqua.
+						</p>
+					</div>
+					<div class="box">
+						<i class="fa-sharp fa-solid fa-shield"></i>
+						<h4 class="box-title">Web Security</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit sed do eiusmod tempor incididunt ut labore et
+							dolore magna aliqua.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
-    <header class="splash">
-        <div class="foto-wrapper">
-            <div class="up-wrapper">
-                <div class="h3-wrapper">
-                    <h3 class="mark-name">Golden</h3>
-                </div>
-                <div class="nav-wrapper">
-                    <nav>
-                        <ul>
-                            <li><a href="#">home</a></li>
-                            <li><a href="#">services</a></li>
-                            <li><a href="#">portfolio</a></li>
-                            <li><a href="#">about</a></li>
-                            <li><a href="#">contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div class="splash-center">
-                <h2>Welcome to our studio!</h2>
-                <h1>It's nice to meet you</h1>
-                <a href="#" class="button">tell me more</a>
-            </div>
-        </div>
-    </header>
-
-    <section class="services">
-        <div class="container">
-            <div class="section-title">
-                <h2>Services</h2>
-                <p>Lorem Ipsum dolor sit amet</p>
-            </div>
-            <div class="section-wrapper">
-                <div class="box">
-                    <i class="fa-solid fa-basket-shopping"></i>
-                    <h4 class="box-title">E-Commerce</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-laptop-code"></i>
-                    <h4 class="box-title">Responsive Web</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="box">
-                    <i class="fa-sharp fa-solid fa-shield"></i>
-                    <h4 class="box-title">Web Security</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="portfolio">
-        <div class="container">
-            <div class="section-title">
-                <h2>Our portfolio</h2>
-                <p>Lorem Ipsum dolor sit amet</p>
-            </div>
-            <div class="section-wrapper">
-                <div class="box-portfolio">
-                    <div class="immage-wrapper">
-                        <img src="https://images.pexels.com/photos/510174/pexels-photo-510174.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
-                    </div>
-                    <h4 class="box-title">Ebony &amp; Ivory</h4>
-                    <p>Lorem ipsum dolor</p>
-                </div>
-                <div class="box-portfolio">
-                    <div class="immage-wrapper">
-                        <img src="https://images.pexels.com/photos/2265484/pexels-photo-2265484.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
-                    </div>
-                    <h4 class="box-title">Smart Stationary</h4>
-                    <p>Lorem ipsum dolor</p>
-                </div>
-                <div class="box-portfolio">
-                    <div class="immage-wrapper">
-                        <img src="https://images.pexels.com/photos/955405/pexels-photo-955405.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
-                    </div>
-                    <h4 class="box-title">Treehouse Template</h4>
-                    <p>Lorem ipsum dolor</p>
-                </div>
-                <div class="box-portfolio">
-                    <div class="immage-wrapper">
-                        <img src="https://images.pexels.com/photos/1827548/pexels-photo-1827548.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
-                    </div>
-                    <h4 class="box-title">Clever Poster</h4>
-                    <p>Lorem ipsum dolor</p>
-                </div>
-                <div class="box-portfolio">
-                    <div class="immage-wrapper">
-                        <img src="https://images.pexels.com/photos/3693111/pexels-photo-3693111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
-                    </div>
-                    <h4 class="box-title">Vinyl Record</h4>
-                    <p>Lorem ipsum dolor</p>
-                </div>
-                <div class="box-portfolio">
-                    <div class="immage-wrapper">
-                        <img src="https://images.pexels.com/photos/1268124/pexels-photo-1268124.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
-                    </div>
-                    <h4 class="box-title">Burned Logo</h4>
-                    <p>Lorem ipsum dolor</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer class="page-footer">
-        <div class="footer-container">
-            <div class="footer-text">
-                <p>&copy; Copyright 2014 FreebiesXpress.com</p>
-            </div>
-            <div class="contact-wrapper">
-                <ul>
-                    <li class="contact-list"><a href="#"><i class=" contact fa-brands fa-twitter"></i>Facebook</a></li>
-                    <li class="contact-list"><a href="#"><i class="contact fa-brands fa-facebook-f"></i>Instagram</a></li>
-                    <li class="contact-list"><a href="#"><i class="contact fa-brands fa-pinterest-p"></i>Pinterest</a></li>
-                    <li class="contact-list"><a href="#"><i class="contact fa-brands fa-google-plus-g"></i>Google</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-</body>
+		<section class="portfolio">
+			<div class="container">
+				<div class="section-title">
+					<h2>Our portfolio</h2>
+					<p>Lorem Ipsum dolor sit amet</p>
+				</div>
+				<div class="section-wrapper">
+					<div class="box-portfolio">
+						<div class="immage-wrapper">
+							<img
+								src="https://images.pexels.com/photos/510174/pexels-photo-510174.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+								alt="image"
+							/>
+						</div>
+						<h4 class="box-title">Ebony &amp; Ivory</h4>
+						<p>Lorem ipsum dolor</p>
+					</div>
+					<div class="box-portfolio">
+						<div class="immage-wrapper">
+							<img
+								src="https://images.pexels.com/photos/2265484/pexels-photo-2265484.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+								alt="image"
+							/>
+						</div>
+						<h4 class="box-title">Smart Stationary</h4>
+						<p>Lorem ipsum dolor</p>
+					</div>
+					<div class="box-portfolio">
+						<div class="immage-wrapper">
+							<img
+								src="https://images.pexels.com/photos/955405/pexels-photo-955405.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+								alt="image"
+							/>
+						</div>
+						<h4 class="box-title">Treehouse Template</h4>
+						<p>Lorem ipsum dolor</p>
+					</div>
+					<div class="box-portfolio">
+						<div class="immage-wrapper">
+							<img
+								src="https://images.pexels.com/photos/1827548/pexels-photo-1827548.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+								alt="image"
+							/>
+						</div>
+						<h4 class="box-title">Clever Poster</h4>
+						<p>Lorem ipsum dolor</p>
+					</div>
+					<div class="box-portfolio">
+						<div class="immage-wrapper">
+							<img
+								src="https://images.pexels.com/photos/3693111/pexels-photo-3693111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+								alt="image"
+							/>
+						</div>
+						<h4 class="box-title">Vinyl Record</h4>
+						<p>Lorem ipsum dolor</p>
+					</div>
+					<div class="box-portfolio">
+						<div class="immage-wrapper">
+							<img
+								src="https://images.pexels.com/photos/1268124/pexels-photo-1268124.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+								alt="image"
+							/>
+						</div>
+						<h4 class="box-title">Burned Logo</h4>
+						<p>Lorem ipsum dolor</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer class="page-footer">
+			<div class="footer-container">
+				<div class="footer-text">
+					<p>&copy; Copyright 2014 FreebiesXpress.com</p>
+				</div>
+				<div class="contact-wrapper">
+					<ul>
+						<li class="contact-list">
+							<a href="#"
+								><i class="contact fa-brands fa-twitter"></i
+								>Facebook</a
+							>
+						</li>
+						<li class="contact-list">
+							<a href="#"
+								><i class="contact fa-brands fa-facebook-f"></i
+								>Instagram</a
+							>
+						</li>
+						<li class="contact-list">
+							<a href="#"
+								><i class="contact fa-brands fa-pinterest-p"></i
+								>Pinterest</a
+							>
+						</li>
+						<li class="contact-list">
+							<a href="#"
+								><i
+									class="contact fa-brands fa-google-plus-g"
+								></i
+								>Google</a
+							>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
